# OpenGL-glTF

./: CMakeLists.txt
headers/: Mesh.h  Model.h
src/: Model.cpp  main.cpp
